--- a/build.gradle
+++ b/build.gradle
@@ -28,12 +28,14 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-security'  // Spring Security 활성화
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'  // Thymeleaf Security 추가
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'com.mysql:mysql-connector-j'  // MySQL Connector 추가 (배포용)
-	// implementation 'org.springframework.boot:spring-boot-starter-security'  // 2순위 기능
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.security:spring-security-test'  // Security 테스트 의존성 추가
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 }
