버그 수정 - 글 작성하고 작성완료 버튼 누르니까 500 에러 페이지 해결 - 시작 시 admin 계정 생성 - 댓글 작성 안되던 문제 해결 - 댓글 수정/삭제 버그 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,12 @@ spring:
   profiles:
     active: dev
 
+  # MVC 설정 - HTML 폼에서 DELETE, PUT 등의 HTTP 메서드 지원
+  mvc:
+    hiddenmethod:
+      filter:
+        enabled: true
+
   # 데이터 JPA 감사 기능 활성화
   jpa:
     hibernate:
