--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # MySQL 데이터베이스
   mysql:
@@ -20,6 +18,12 @@ services:
     command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     networks:
       - board-network
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-proot_password"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 30s
 
   # Spring Boot 애플리케이션
   app:
@@ -34,7 +38,8 @@ services:
     ports:
       - "8080:8080"
     depends_on:
-      - mysql
+      mysql:
+        condition: service_healthy
     volumes:
       - app_logs:/app/logs
     networks:
@@ -47,20 +52,20 @@ services:
       start_period: 60s
 
   # Nginx (선택사항 - 리버스 프록시)
-  nginx:
-    image: nginx:alpine
-    container_name: board-nginx
-    restart: unless-stopped
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./ssl:/etc/nginx/ssl:ro
-    depends_on:
-      - app
-    networks:
-      - board-network
+#  nginx:
+#    image: nginx:alpine
+#    container_name: board-nginx
+#    restart: unless-stopped
+#    ports:
+#      - "80:80"
+#      - "443:443"
+#    volumes:
+#      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+#      - ./ssl:/etc/nginx/ssl:ro
+#    depends_on:
+#      - app
+#    networks:
+#      - board-network
 
 volumes:
   mysql_data:
